docs(website): documented integration with Jasmine and Mocha test runners

--- a/documentation/serenity-js.org/docs/design/assertions.mdx
+++ b/documentation/serenity-js.org/docs/design/assertions.mdx
@@ -3,8 +3,7 @@ sidebar_position: 2
 ---
 # Assertions and Expectations
 
-```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-```
-
-<ArticleComingSoon />
+- portable
+- composable
+- work across interfaces
+- you can write your own expectations
