--- a/documentation/serenity-js.org/docs/installation.mdx
+++ b/documentation/serenity-js.org/docs/installation.mdx
@@ -1,19 +1,11 @@
 ---
-sidebar_position: 1
+sidebar_position: 3
 ---
 
-# Cucumber.js
+# Installation
 
 ```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
 <ArticleComingSoon />
-
-
-## Integrating with Serenity/JS
-
-## Running test scenarios
-
-## Debugging
-
