--- a/documentation/serenity-js.org/docs/index.mdx
+++ b/documentation/serenity-js.org/docs/index.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Introducing Serenity/JS
+# Why Serenity/JS
 
 **Serenity/JS** is a free and open-source **acceptance testing framework** that can help you establish a **clear link** between
 the **expected business functionality** and the **actual working state** of your software system.
@@ -13,7 +13,7 @@ and to help you **prove** that your system **meets** and **continues to meet** i
 To help you achieve all that, Serenity/JS enables you to:
 - Follow the [**Serenity/JS Screenplay Pattern**](/handbook/design/screenplay-pattern) to define your own **domain-specific test language**
   that everyone on your team can read, understand, and reason about - including your business sponsors and domain experts.
-- Create **single- and multi-actor test scenarios** that interact with [**any interface of your system**](/handbook/design/modular-architecture),
+- Create **single- and multi-actor test scenarios** that interact with [**any interface of your system**](/handbook/about/architecture),
   including web UIs, REST APIs, mobile apps, and pretty much anything a Node.js program can integrate with.
 - Turn your test automation code into **test automation libraries** that are easy to [**share across projects and teams**](/handbook/design/portable-test-code),
   so your whole company can benefit from your automation work and avoid code duplication and wasted effort.
