--- a/documentation/serenity-js.org/docs/about/versioning.mdx
+++ b/documentation/serenity-js.org/docs/about/versioning.mdx
@@ -40,7 +40,7 @@ The [public APIs](/api) of the framework will not be removed or changed in a bac
 
 When an API is marked as `@deprectated`, the documentation of the API will provide instructions on what other API has superseded the deprecated one. Additionally, a ticket marked as [`deprecation-notice`](https://github.com/serenity-js/serenity-js/labels/deprecation-notice) is raised on Serenity/JS GitHub, and you'll have at least 3 months since the ticket is raised to migrate the code using a deprecated api to the new alternative.
 
-Removing a deprecated API will not affect the major version number of the Serenity/JS framework.
+Removing a deprecated API will not affect the major version number of the Serenity/JS framework, but a new major version release will typically remove all the deprecated APIs implemented in the previous major version.
 
 You can [watch](https://docs.github.com/en/github/managing-subscriptions-and-notifications-on-github/configuring-notifications#configuring-your-watch-settings-for-an-individual-repository) the [Serenity/JS GitHub](https://github.com/serenity-js/serenity-js) repository to be notified of deprecated APIs.
 
