--- a/documentation/serenity-js.org/docs/about/architecture.mdx
+++ b/documentation/serenity-js.org/docs/about/architecture.mdx
@@ -46,7 +46,7 @@ compatible with [Serenity/JS reporting services](/handbook/reporting/) (a.k.a. [
 
 ```mermaid
 flowchart TB
-    Developer["You"]
+    Developer["💻 You"]
     TestCode["Your Test Code"]
     Stage
 
@@ -89,7 +89,7 @@ produce more events to prompt other crew members to action, or perform side effe
 
 ```mermaid
 flowchart TB
-    Developer["You"]
+    Developer["💻 You"]
     TestCode["Your Test Code"]
     SerenityModules["Serenity/JS Modules"]
     TestReports["Test Execution Reports"]
@@ -153,7 +153,7 @@ Apart from the integration modules, the framework also offers [**Serenity/JS Ass
 
 ```mermaid
 flowchart TB
-    Developer["You"]
+    Developer["💻 You"]
     TestCode["Your Test Code"]
     IntegrationLibraries["Low-Level Integration Libraries"]
     SUT["Your System-Under-Test"]
