--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -66,7 +66,7 @@ and then turned into Serenity BDD HTML reports by [Serenity BDD Reporting CLI](h
 graph TB
     A(["Actors"])
     TRA(["Serenity/JS test runner adapter"])
-    DEV(["👩‍💻 Developer"])
+    DEV(["💻 Developer"])
     S["Serenity"]
     AA["ArtifactArchiver"]
     SBDDR["SerenityBDDReporter"]
