docs(website): updated cucumber, jasmine, and mocha guides

--- a/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
@@ -14,12 +14,9 @@ import TabItem from '@theme/TabItem';
 and a test runner capable of executing test scenarios
 written in [plain language](https://cucumber.io/docs/guides/overview/).
 
-Integrating Serenity/JS with Cucumber enables your team to:
-- implement Cucumber [step definitions](https://cucumber.io/docs/cucumber/step-definitions/?lang=javascript) using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs
-- use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter) (even if your test scenarios don't follow the Screenplay Pattern yet)
-
-On top of that, Serenity understands the structure of your Cucumber `.feature` files and will augment your test execution reports
-with feature and scenario descriptions, detailed information about Cucumber steps, and [much more](https://serenity-bdd.github.io/docs/reporting/the_serenity_reports)!
+**You will learn:**
+- How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
+- How to implement Cucumber [step definitions](https://cucumber.io/docs/cucumber/step-definitions/?lang=javascript) using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs
 
 ## Examples and Project Templates
 
@@ -30,24 +27,36 @@ If you'd like to dive straight into the code,
 
 ## Using Serenity/JS reporting services
 
+To use [Serenity/JS reporting services](/handbook/reporting/) in a Cucumber project, you need to:
+- attach the [`@serenity-js/cucumber`](/api/cucumber) test runner adapter to Cucumber
+- [configure Serenity/JS](/api/core/function/configure) to use the reporting services you want to use,
+such as the [`ConsoleReporter`](/handbook/reporting/console-reporter)
+or [`SerenityBDDReporter`](/handbook/reporting/serenity-bdd-reporter)
+
+:::tip Serenity/JS test runner adapters
+Serenity/JS test runner adapters turn internal, test runner-specific events
+into [Serenity/JS domain events](/handbook/reporting/domain-events) that can contribute to test execution reports produced
+by [Serenity/JS reporting services](/handbook/reporting/).
+:::
+
 [`@serenity-js/cucumber` module](/api/cucumber) provides a set of [**test runner adapters**](/handbook/about/architecture)
 you can attach to _**any version**_ of Cucumber test runner.
 The module detects the version of Cucumber you're using and picks the most appropriate adapter automatically.
 
-Serenity/JS test runner adapters turn internal, test runner-specific events
-into [Serenity/JS domain events](/handbook/reporting/domain-events) that can contribute to test execution reports produced
-by [Serenity/JS reporting services](/handbook/reporting/).
+Integration architecture depicted below applies to invoking `cucumber-js` command line interface directly,
+for example for **domain-level**, [**REST/HTTP API-level**](/handbook/api-testing/),
+or [**web-based testing**](/handbook/web-testing/) using [Playwright](/api/playwright).
 
-To use [Serenity/JS reporting services](/handbook/reporting/) in a Cucumber project, you need to:
-- attach the [`@serenity-js/cucumber`](/api/cucumber) test runner adapter to Cucumber
-- [configure Serenity/JS](/api/core/function/configure) to use the reporting services you want to use, such as the [`ConsoleReporter`](/handbook/reporting/console-reporter)
-or [`SerenityBDDReporter`](/handbook/reporting/serenity-bdd-reporter)
+If you want your Cucumber scenarios to interact with **web interfaces** using [Selenium Webdriver protocol](https://www.selenium.dev/documentation/webdriver/),
+or connect them to a [Selenium Grid](https://www.selenium.dev/documentation/grid/),
+you should use Cucumber via [Protractor](/handbook/test-runners/protractor)
+or [WebdriverIO](/handbook/test-runners/webdriverio) instead.
 
 <figure>
 
 ```mermaid
 graph TB
-    DEV(["Developer"])
+    DEV(["💻 Developer"])
     TR(["@cucumber/cucumber"])
     SC(["@serenity-js/core"])
     TRA(["@serenity-js/cucumber"])
@@ -59,7 +68,7 @@ graph TB
     TRA -- notifies --> SC
     CF -- configures --> SC
     SC -- notifies --> R
-    class R socket
+
     click R "/handbook/reporting"
     click SC "/api/core"
     click TRA "/api/cucumber"
@@ -67,21 +76,10 @@ graph TB
 <figcaption>Serenity/JS + Cucumber integration architecture</figcaption>
 </figure>
 
-:::info
-Integration architecture described in this section applies to invoking
-`cucumber-js` command line interface directly, for example for **domain-level**,
-[**REST/HTTP API-level**](/handbook/api-testing/), or [**web-based testing**](/handbook/web-testing/)
-using [Playwright](/api/playwright).
-
-If you want your Cucumber scenarios to interact with **web interfaces** using [Selenium Webdriver protocol](https://www.selenium.dev/documentation/webdriver/),
-or connect them to a [Selenium Grid](https://www.selenium.dev/documentation/grid/),
-you should use Cucumber via [Protractor](/handbook/test-runners/protractor)
-or [WebdriverIO](/handbook/test-runners/webdriverio) instead.
-:::
-
 ### Installing Serenity/JS test runner adapter
 
-Assuming you already have a [Node.js project](/handbook/about/installation#creating-a-nodejs-project) and [Serenity/JS runtime dependencies](/handbook/about/installation) set up,
+Assuming you already have a [Node.js project](/handbook/about/installation#creating-a-nodejs-project)
+and [Serenity/JS runtime dependencies](/handbook/about/installation) set up,
 add the following Node modules:
 - [`@serenity-js/core`](/api/core)
 - [`@serenity-js/cucumber`](/api/cucumber)
@@ -108,18 +106,16 @@ in the Cucumber [`BeforeAll` hook](https://github.com/cucumber/cucumber-js/blob/
 
 ```typescript title="features/support/serenity.config.ts"
 import { BeforeAll } from '@cucumber/cucumber'
-import { ArtifactArchiver, configure } from '@serenity-js/core'
-import { ConsoleReporter } from '@serenity-js/console-reporter'
-import { SerenityBDDReporter } from '@serenity-js/serenity-bdd'
+import { configure } from '@serenity-js/core'
 
 BeforeAll(() => {
 
     // Configure Serenity/JS
     configure({
         crew: [
-            ArtifactArchiver.storingArtifactsAt('./target/site/serenity'),
-            new SerenityBDDReporter(),
-            ConsoleReporter.forDarkTerminals(),
+            '@serenity-js/console-reporter',
+            '@serenity-js/serenity-bdd',
+            [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
             // ... any other reporting services
         ],
     })
@@ -131,18 +127,16 @@ BeforeAll(() => {
 
 ```javascript title="features/support/serenity.config.js"
 const { BeforeAll } = require('@cucumber/cucumber')
-const { ArtifactArchiver, configure } = require('@serenity-js/core')
-const { ConsoleReporter } = require('@serenity-js/console-reporter')
-const { SerenityBDDReporter } = require('@serenity-js/serenity-bdd')
+const { configure } = require('@serenity-js/core')
 
 BeforeAll(() => {
 
     // Configure Serenity/JS
     configure({
         crew: [
-            ArtifactArchiver.storingArtifactsAt('./target/site/serenity'),
-            new SerenityBDDReporter(),
-            ConsoleReporter.forDarkTerminals(),
+            '@serenity-js/console-reporter',
+            '@serenity-js/serenity-bdd',
+            [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
             // ... any other reporting services
         ],
     })
@@ -152,10 +146,15 @@ BeforeAll(() => {
 </TabItem>
 </Tabs>
 
-To find out more about installing and configuring Serenity/JS reporting services appropriate for your project
+To learn more about installing and configuring Serenity/JS reporting services appropriate for your project,
 follow the [Serenity/JS reporting guide](/handbook/reporting/).
 
-### Configure Cucumber profile
+:::tip Serenity understands Cucumber
+Serenity understands the structure of your Cucumber `.feature` files and will augment your test execution reports
+with feature and scenario descriptions, detailed information about Cucumber steps, and [much more](https://serenity-bdd.github.io/docs/reporting/the_serenity_reports)!
+:::
+
+### Configuring Cucumber profile
 
 To make sure Cucumber loads your Serenity/JS configuration file and correctly interprets TypeScript (if you're using it),
 create a [`cucumber.js` profile](https://github.com/cucumber/cucumber-js/blob/main/docs/profiles.md):
@@ -229,10 +228,9 @@ If you're planning to run Cucumber scenarios using the [Cucumber CLI](https://gi
 you can configure the actors in a [`BeforeAll`](https://cucumber.io/docs/cucumber/api/?lang=javascript#beforeall) hook, for example:
 
 ```typescript title="features/support/serenity.config.ts"
-import { BeforeAll } from '@cucumber/cucumber'
-import { ArtifactArchiver, configure } from '@serenity-js/core'
-import { ConsoleReporter } from '@serenity-js/console-reporter'
-import { SerenityBDDReporter } from '@serenity-js/serenity-bdd'
+import { BeforeAll, AfterAll } from '@cucumber/cucumber'
+import { configure, Cast } from '@serenity-js/core'
+import { BrowseTheWebWithPlaywright } from '@serenity-js/playwright'
 
 import * as playwright from 'playwright'
 
@@ -240,23 +238,31 @@ let browser: playwright.Browser;
 
 BeforeAll(async () => {
 
-  // Launch the browser once before all the tests
-  // Serenity/JS will take care of managing Playwright browser context and browser tabs.
-  browser = await playwright.chromium.launch({
-      headless: true,
-  });
+    // Launch the browser once before all the tests
+    // Serenity/JS will take care of managing Playwright browser context and browser tabs.
+    browser = await playwright.chromium.launch({
+        headless: true,
+    });
 
-  // Configure Serenity/JS
-  configure({
-    actors: Cast.whereEveryoneCan(BrowseTheWebWithPlaywright.using(browser, {
-      baseURL: 'https://todo-app.serenity-js.org/',
-    })),
-    crew: [
-      ArtifactArchiver.storingArtifactsAt('./target/site/serenity'),
-      new SerenityBDDReporter(),
-      ConsoleReporter.forDarkTerminals(),
-    ],
-  })
+    // Configure Serenity/JS
+    configure({
+        actors: Cast.where(actor =>
+            actor.whoCan(BrowseTheWebWithPlaywright.using(browser, {
+                baseURL: 'https://todo-app.serenity-js.org/',
+            }))
+        ),
+        crew: [
+            '@serenity-js/console-reporter',
+            '@serenity-js/serenity-bdd',
+            [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
+            // ... any other reporting services
+        ],
+    })
+})
+
+AfterAll(async () => {
+    // Close the browser after all the tests are finished
+    await browser?.close()
 })
 ```
 
@@ -279,8 +285,9 @@ Feature: Todo list
 
 To make Cucumber understand that `Alice` is a name of an actor, and that `her` means the most recent actor we accessed,
 you need to define custom [parameter types](https://github.com/cucumber/cucumber-expressions).
+
 All the [Serenity/JS + Cucumber Project Templates](https://github.com/serenity-js?q=cucumber+template&type=all&language=&sort=)
-use the below definition, which you can tweak to your needs:
+use the below definitions, which use [`actorCalled`](/api/core/function/actorCalled) and [`actorInTheSpotlight`](/api/core/function/actorInTheSpotlight):
 
 ```typescript title="features/step_definitions/parameter.steps.ts"
 import { defineParameterType } from '@cucumber/cucumber'
@@ -320,11 +327,12 @@ When('{actor} opens the todo app for the first time', async (actor: Actor) => {
 })
 
 Then('{pronoun} todo list should be empty', async (actor: Actor) => {
-    const displayedItems = PageElements.located(By.css('.todo-list li'))
-        .describedAs('displayed items')
+    const displayedItems = () =>
+        PageElements.located(By.css('.todo-list li'))
+            .describedAs('displayed items')
 
     await actor.attemptsTo(
-        Ensure.that(displayedItems.count(), equals(0))
+        Ensure.that(displayedItems().count(), equals(0))
     )
 })
 ```
